src/components/input/_input.component.scss
@use "../../style/variables";

.kyc-input {
	height: var(--button-height);
	display: inline-flex;
	justify-content: space-between;
	box-sizing: border-box;
	padding-left: 1.5em;
	align-items: center;

	position: relative;
	box-shadow: 0 0 0 0 rgba(white, 0);
	background: white;
	color: black;
	border-radius: var(--border-radius-light);
	font-size: 12pt;
	font-family: var(--primary-font);


	border: 2px solid black;
	//padding-right: 3em;

	@extend .tr2;

	::placeholder {
		color: black;
		font-family: var(--primary-font);
	}

	::-webkit-input-placeholder {
		color: black;
		font-family: var(--primary-font);
	}

	:-ms-input-placeholder {
		color: black;
		font-family: var(--primary-font);
	}

	::-ms-input-placeholder {
		color: black;
		font-family: var(--primary-font);
	}

	&:hover {
		background: white;
		//background: $--kyc-normal-blue-15;
		border: 2px solid var(--kyc-cybergreen);
		box-shadow: 0 0 0 10px var(--kyc-cybergreen-35);
		@extend .tr2;
	}

	&:focus {
		background: black;
		border: 2px solid var(--kyc-cybergreen);
		box-shadow: 0 0 0 5px var(--kyc-cybergreen-50);
		@extend .tr2;

		color: white;
	}

	&.full-width {
		display: flex;
		width: 100%;
	}
}

div.clear {
	position: absolute;
	right: 5px;
	bottom: 85px;
	font-size: 24px;
	display: flex;
	color: black;
	cursor: pointer;
	border-radius: var(--border-radius-light);
	background: transparent;
	padding: 3px 9px;
	line-height: 132%;

	@extend .tr2;

	&:hover {
		background: var(--kyc-cybergreen-35);
	}

	&:active {
		background: black;
		color: var(--kyc-cybergreen);
	}

	&.disabled {
		color: lightgrey;
	}
}

div.kyc-option {
	height: 2.5em;
	cursor: pointer;
	line-height: 2.5em;
	padding-left: 1.5em;
	border-bottom: 1px solid var(--kyc-normal-blue-15);
	font-family: var(--primary-font);
	font-weight: 400;
	color: black;
	justify-content: left;

	strong {
		font-family: var(--primary-font);
		font-weight: 800;
		justify-content: center;
	}

	&:hover {
		background: var(--kyc-cybergreen-35);
		color: black;
	}
}

// TODO Virtual keyboard and stuff

div.autocomplete {
	//width: 368px;
	width: 100%;
	max-height: 18vh;
	height: auto;
	overflow-y: auto;
	bottom: 0;

	.kyc-option {

		strong{
			font-family: var(--primary-font);
			font-weight: 800;
		}
	}
}

@media only screen and (min-width: 992px) {
	div.autocomplete {
		max-height: 20vh;
	}
}

